ignore node modules.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /user-service/node_modules
-
+/order-service/node_modules
+/product-service/node_modules
+/gateway/node_modules
+/node_modules
 .env
