--- a/user-service/.env
+++ b/user-service/.env
@@ -4,3 +4,6 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=user_service
+REDIS_URL=redis://localhost:6379
+EMAIL_SERVICE_USER=
+EMAIL_SERVICE_PASSWORD=
