--- a/product-service/package.json
+++ b/product-service/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "mongoose": "^8.9.3",
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.7.0"
   },
