--- a/product-service/package.json
+++ b/product-service/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.7.0"
@@ -26,6 +27,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.5",
     "@types/supertest": "^6.0.2",
